# cairn

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  quick-capture.html  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  DESIGN.md  EDITOR.md
sample/Captures/: 01KPXZM1C9NSRDPVCTQHG1D3KW.md  20260418-oss-contribution-idea.md  20260419-eng-standup-notes.md  20260420-dan-question-on-cookie-vs-jwt.md  20260421-annual-review-prompt.md  20260422-book-notes-thinking-in-systems.md  20260423-api-rate-limit-idea.md
sample/Someday/: build-woodworking-shed.md  learn-rust-properly.md  redesign-personal-site.md  sabbatical-japan-2027.md  write-a-technical-book.md
specs/: SPEC_0.md
src/: app.tsx  index.css  main.tsx  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/md/: mod.rs
src-tauri/src/preferences/: mod.rs
src-tauri/src/registry/: mod.rs
src-tauri/src/reminders/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tags/: mod.rs
src-tauri/src/trash/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/vault/: mod.rs
src-tauri/src/watcher/: mod.rs
src/ds/: Badge.tsx  Button.test.tsx  Button.tsx  Card.tsx  Dialog.tsx  DropdownMenu.tsx  Input.tsx  Switch.test.tsx  Switch.tsx  Textarea.test.tsx  Textarea.tsx  index.ts
src/editor/: Editor.tsx  (+5 more)
tests/: setup.ts
(+101 files in other folders)
