[package]
name = "cairn"
version = "0.1.0"
description = "Cairn — local-first notes, knowledge, and GTD"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cairn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
notify = "7"
walkdir = "2"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
